plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "2.2.0"
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${mod_loader.toLowerCase(Locale.ENGLISH)}-${minecraft_version}"
}

repositories {
    mavenLocal()
    maven {// Forge Config API Port
        name = "Fuzs Mod Resources"
        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
    }
    maven { // Mod Menu
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"

    modApi include("fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}")
}

fabricApi {
    configureDataGeneration {
        client = true
    }
}

processResources {
    inputs.property "version", version
    inputs.property "mod_name", mod_name
    inputs.property "mod_id", mod_id
    inputs.property "mod_license", mod_license
    inputs.property "description", description

    filesMatching("fabric.mod.json") {
        expand(
                "version": version,
                "mod_name": mod_name,
                "mod_license": mod_license,
                "mod_id": mod_id,
                "description": mod_description
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

sourceSets.main.resources {
    exclude('**/wip', '.cache') // exclude project files and the cache from the jar
    srcDir 'src/generated/resources'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

publishMods {
    changelog = rootProject.file("CHANGELOG-LATEST.md").text // thank you evanbones
    type = STABLE
    file = tasks.named("remapJar").flatMap { it.archiveFile }
    version = "${project.version}+${mod_loader.toLowerCase(Locale.ENGLISH)}-${minecraft_version}"
    displayName = "${mod_name} ${project.version} for ${mod_loader} ${minecraft_version}"
    modLoaders.add(mod_loader.toLowerCase(Locale.ENGLISH))

    //noinspection GroovyAssignabilityCheck // What the heck!
    modrinth {
        accessToken = providers.gradleProperty("MODRINTH_PUBLISH_TOKEN").orNull
        projectId = "F2pk6al7"
        environment = CLIENT_AND_SERVER
        minecraftVersions.add("${minecraft_version}")
    }

    //noinspection GroovyAssignabilityCheck
    github {
        accessToken = providers.gradleProperty("GITHUB_PUBLISH_TOKEN").orNull
        repository = "vercte/gleeful-creepers"
        tagName = "21.1/fabric/${project.version}"
        commitish = "21.1/fabric/dev"
    }
}
